<resources>
    <string name="app_name">DepromeetAndroid</string>

    <!-- home -->
    <string name="home_sight_seeing">시야 찾기</string>
    <string name="home_sight_seeing_description">어떤 곳에서\n응원할까요?</string>
    <string name="home_register_sight">시야 후기 등록</string>
    <string name="home_register_sight_description">어느 곳에\n앉으셨나요?</string>
    <string name="home_my_sight_record">내 시야 기록</string>
    <string name="home_my_sight_record_description">뜨거웠던\n순간의 모음</string>
    <string name="home_my_recent_sight_record">내 최근 시야 기록</string>
    <string name="home_more">더보기</string>
    <string name="home_no_record_description">아직 아카이빙한\n게시물이 없습니다.</string>
    <string name="home_write_record">시야 사진 올리기 </string>
    <string name="home_no_record_advice">시야 사진을 올려서 아카이빙 해보세요!</string>
    <string name="home_fail_description">정보를 불러올 수 없습니다.</string>
    <string name="home_fail_advice">새로고침하여 다시 시도해 주세요!</string>
    <string name="home_seat_archiving">나의 아카이빙</string>
    <string name="home_seat_archiving_description">시야 및 직관후기 모음</string>
    <string name="home_scrap">스크랩</string>
    <string name="home_scrap_description">내가 스크랩한 시야 정보</string>
    <string name="home_upload_review">등록하기</string>
    <string name="refresh">새로고침</string>
    <string name="home_profile_image_delete">프로필 삭제시 복구하기 어려워요</string>
    <string name="home_level_up">LEVEL UP!</string>
    <string name="home_new">NEW</string>
        <!-- level -->
    <string name="one_level_to_title">직관 첫 걸음</string>

    <!-- profileEdit -->
    <string name="profile_edit_select_album">앨범에서 선택</string>
    <string name="profile_edit_delete_image">프로필 사진 삭제</string>
    <string name="profile_edit_close">닫기</string>
    <string name="profile_edit_title">프로필 수정</string>
    <string name="profile_edit_complete">완료</string>
    <string name="profile_edit_nickname">닉네임</string>
    <string name="profile_edit_cheer_team">응원 팀</string>
    <string name="profile_edit_cheer_all">모두 응원해요</string>
    <string name="profile_edit_error_duplicate">이미 사용중인 닉네임이에요.</string>
    <string name="profile_edit_error_type">닉네임은 알파벳 대소문자, 숫자, 한글만 입력 가능합니다.</string>
    <string name="profile_edit_error_length">닉네임은 최소 2글자에서 최대 10글자로 입력해 주세요.</string>
    <string name="profile_edit_empty">비어있습니다.</string>
    <string name="profile_edit_error_no">정상적으로 입력 완료!</string>
    <string name="profile_edit_remove">프로필 사진 삭제</string>
    <string name="profile_edit_gallery">갤러리에서 선택</string>
    <string name="profile_edit_camera">사진 촬영</string>
    <string name="profile_edit_change_image">프로필 사진 변경</string>

    <!-- upload_error -->
    <string name="upload_error_capacity_description">선택한 사진의\n용량이 너무 커요</string>
    <string name="upload_error_capacity_5MB">5MB</string>
    <string name="upload_error_capacity_15MB">15MB</string>
    <string name="upload_error_discipline">에 맞게 다시 선택해주세요</string>
    <string name="upload_error_extension_description">선택한 사진\n확장자가 맞지 않아요</string>
    <string name="upload_error_extension_photo">jpg, jpeg, png, heic 사진을 선택해주세요</string>
    <string name="upload_error_check">확인</string>

    <!-- viewfinder -->
    <string name="viewfinder_dot">•</string>
    <string name="viewfinder_column">열</string>
    <string name="viewfinder_number">번</string>
    <string name="viewfinder_cancel">취소</string>
    <string name="viewfinder_completed">완료</string>
    <string name="viewfinder_tip">Tip!</string>
    <string name="viewfinder_fold">접기</string>
    <string name="viewfinder_more">더보기</string>
    <string name="viewfinder_report">신고하기</string>
    <string name="viewfinder_input_example">ex) 12</string>
    <string name="viewfinder_latest">•최신순</string>
    <string name="viewfinder_agree">•공감순</string>
    <string name="viewfinder_refresh">원래대로</string>
    <string name="viewfinder_go_back">돌아가기</string>
    <string name="viewfinder_find_view">시야찾기</string>
    <string name="viewfinder_find_section">구역 찾기</string>
    <string name="viewfinder_review_view">시야 후기</string>
    <string name="viewfinder_monthly_view">월별 시야</string>
    <string name="viewfinder_selection_seat">좌석선택</string>
    <string name="viewfinder_selection_area">구역 선택</string>
    <string name="viewfinder_question_title">열과 번이 무엇인가요?</string>
    <string name="viewfinder_error_column">존재하지 않는 열입니다.</string>
    <string name="viewfinder_error_number">존재하지 않는 번입니다.</string>
    <string name="viewfinder_error_column_and_number">존재하지 않는 열과 번입니다.</string>
    <string name="viewfinder_question_01">\‘열\’은 같은 가로 줄에 있는 좌석이고, 번호는 좌석에 대한 고유 번호를 뜻해요.</string>
    <string name="viewfinder_question_02">ex. 2열 7번좌석</string>
    <string name="viewfinder_select_only_column">\'열\'만 선택하기</string>
    <string name="viewfinder_empty_review">등록된 시야 후기가 없습니다.</string>
    <string name="viewfinder_find_section_description">선택한 구역만을 보여줘요</string>
    <string name="viewfinder_empty_review_description">다른 좌석을 선택해 새로운 시야를 찾아보세요!</string>
    <string name="viewfinder_stadium_selection_description">어떤 야구장의\n시야가 궁금하신가요?</string>
    <string name="viewfinder_stadium_selection_sub_description">꾸준히 다른 구장에 대한 정보가 추가될 예정이에요</string>
    <string name="viewfinder_zoom_description">화면을 손가락으로 확대하여\n구역을 더 크게 보세요!</string>
    <string name="viewfinder_lock_warning_description">현재 잠실야구장만 이용할 수 있어요!</string>
    <string name="viewfinder_snackbar_scrap">스크랩이 완료되었어요!</string>
    <string name="viewfinder_inactive_snackbar_scrap">스크랩이 해제되었어요!</string>
    <string name="viewfinder_lock_warning_trigger">"<u>"잠실야구장 보기"</u>"</string>
    <string name="viewfinder_underscore_snackbar_scrap">"<u>"스크랩으로 이동"</u>"</string>
    <string name="viewfinder_empty_block_description">다른 블록에서 새로운 시야를 찾아보세요!</string>
    <string name="viewfinder_tooltip_description">열과 번을 선택해 빠르게 자리를 찾아보세요⚡</string>

    <string name="viewfinder_date_dot">・%s</string>
    <string name="viewfinder_plus_count">+%s</string>
    <string name="viewfinder_level_format">Lv.%s</string>
    <string name="viewfinder_month_format">%s월</string>
    <string name="viewfinder_seat_format">%s열</string>
    <string name="viewfinder_seat_number_format">%s열 %s번</string>
    <string name="viewfinder_best_keyword_description_format">가장 많이 선정된 %s개의 키워드만 보여줘요</string>
    <string name="viewfinder_empty_block_review_description">%s에 등록된\n시야 후기가 없습니다.</string>

    <!-- viewRecord / seatRecord -->
    <string name="view_record_my">시야 아카이빙</string>
    <string name="view_record_whole">전체 기록</string>
    <string name="view_record_all">전체</string>
    <string name="record_remove">게시물 삭제</string>
    <string name="record_manage">게시물 관리</string>
    <string name="view_record_help">도움 제공</string>
    <string name="seat_record_seat_view">좌석시야</string>
    <string name="seat_recotd_intuitive_view">직관후기</string>
    <string name="seat_record_empty_description_one">아직 아카이빙한</string>
    <string name="seat_record_empty_description_two">게시물이 없습니다.</string>

    <!-- viewDetail 관련-->
    <string name="record_edit">게시물 수정</string>
    <string name="record_delete">게시물 삭제</string>
    <string name="confirm_delete_question">정말 삭제하시겠어요?</string>
    <string name="confirm_delete_description">게시물 삭제시 복구가 불가능합니다</string>
    <string name="confirm_delete_do">삭제하기</string>
    <string name="confirm_delete_cancel">취소</string>
    <string name="two_level_to_title">경기장 탐험가</string>
    <string name="three_level_to_title">직관의 여유</string>
    <string name="four_level_to_title">응원 단장</string>
    <string name="five_level_to_title">야구정 VIP</string>
    <string name="six_level_to_title">전설의 직관러</string>
    <string name="unknown_level_to_title">알 수 없음</string>

    <!-- seatReview 관련-->
    <string name="seat_review_no_view_image"><u>시야 사진이 없어요</u></string>

    <!-- Error -->
    <string name="error_reload">새로고침</string>
    <string name="error_server_content_title">정보를 불러올 수 없습니다.</string>
    <string name="error_server_content_description">새로고침하여 다시 시도해 주세요!</string>

    <!-- 셋팅 -->
    <string name="setting_title">설정 및 개인정보</string>
    <string name="setting_feedback_title">SPOT은 여러분의 피드백으로 성장해요!</string>
    <string name="setting_feedback_description">좋은 점, 개선할 점, 궁금한 점 모두 알려주세요</string>
    <string name="setting_manage_account">계정 관리</string>

    <!-- Evaluation(평가) -->
    <string name="good_title">이런 점이 좋아요</string>
    <string name="good_one">💺️ 충분한 다리 공간</string>
    <string name="good_two">🔥 생생한 응원 열기</string>
    <string name="good_three">🏟️ 좋은 시야각</string>
    <string name="good_four">🍃 선선한 그늘존</string>
    <string name="good_five">🚶 가까운 출입구</string>
    <string name="bad_title">이런 점이 아쉬워요</string>
    <string name="bad_one">🌞 온종일 햇빛존</string>
    <string name="bad_two">🤢 벌레가 많은 자리</string>
    <string name="bad_three">🥅 신경 쓰이는 그물망</string>
    <string name="bad_four">🥲 시야방해 기둥</string>
    <string name="bad_five">🥤 컵홀더가 없는 자리</string>
    <string name="bad_six">📢 시끄러운 스피커</string>
    <string name="bad_seven">🪟 유리막이 있는 자리</string>

    <!-- 스크랩 -->
    <string name="scrap_title">스크랩</string>
    <string name="scrap_save_record">저장된 게시물</string>
    <string name="scrap_empty_description">아직 스크랩한\n게시물이 없습니다.</string>
    <string name="scrap_empty_description_one">아직 스크랩한</string>
    <string name="scrap_empty_description_two">게시물이 없습니다.</string>
    <string name="scrap_empty_advice">궁금한 야구장 시야를 찾아보세요!</string>
    <string name="scrap_find_view">시야 찾으러 가기</string>
    <string name="scrap_fail_advice">새로고침하여 다시 시도해주세요!</string>
    <string name="scrap_fail_description">정보를 불러올 수 없습니다.</string>
    <string name="scrap_filter">필터</string>
    <string name="scrap_filter_title">필터</string>
    <string name="scrap_filter_selection">야구장 선택</string>
    <string name="scrap_filter_month">월별 시야</string>
    <string name="scrap_search">검색하기</string>
    <string name="stadium_jamsil">잠실야구장</string>
    <string name="scrap_more"><u>더보기</u></string>


    <!-- 게시물 수정 -->
    <string name="edit_review_title">게시물 수정</string>
    <string name="edit_review_select_seat">좌석 선택</string>
    <string name="edit_review_upload">업로드</string>


</resources>